tests/errors/macro/parser_unexpected_endif.c
int a = 0;
#endif a = 1;

int main()
{
	assert(a, "recovery is not working");
	return 0;
}
